# everybody-codes

./: .gitignore  .pre-commit-config.yaml  .yamlfmt  pyproject.toml
src/everybody_codes/: main.py
